Fix scrolling on mobile devices

--- a/static/turbofish.css
+++ b/static/turbofish.css
@@ -14,6 +14,7 @@ html {
 
 html, body {
     height: 100%;
+    overflow: hidden;
 }
 
 body {
